# internal/tiger/api/client.go
@@ -1437,9 +1437,9 @@ func NewGetServiceLogsRequest(server string, projectId ProjectId, serviceId Serv
 
 		}
 
-		if params.StartTime != nil {
+		if params.From != nil {
 
-			if queryFrag, err := runtime.StyleParamWithLocation("form", true, "startTime", runtime.ParamLocationQuery, *params.StartTime); err != nil {
+			if queryFrag, err := runtime.StyleParamWithLocation("form", true, "from", runtime.ParamLocationQuery, *params.From); err != nil {
 				return nil, err
 			} else if parsed, err := url.ParseQuery(queryFrag); err != nil {
 				return nil, err
